<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="mySettings"
    android:title="@string/Settings" >

    <PreferenceCategory
        android:key="CategCustom"
        android:layout="@layout/pref_categories_layout"
        android:title="@string/CustAccount" >
        <com.mk4droid.IMC_Core.Preference_AccountOperations
            android:enabled="true"
            android:key="Account_Operations_IMC"
            android:layout="@layout/pref"
            android:summary="@string/LoginRegisterRemind"
            android:title="@string/AccountOperations" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="CategLang"
        android:layout="@layout/pref_categories_layout"
        android:title="@string/Language" >
        <ListPreference
            android:defaultValue="en - English"
            android:entries="@array/Language"
            android:entryValues="@array/Language"
            android:key="LanguageAR"
            android:layout="@layout/pref"
            android:summary="@string/LangSel"
            android:title="Language" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="CategSystem"
        android:layout="@layout/pref_categories_layout"
        android:title="@string/System" >
        <com.mk4droid.IMC_Core.Preference_SeekBar
            android:enabled="false"
            android:key="distance_seekBar"
            android:summary="@string/ViewRadius"
            android:title="@string/ViewRange" />

        <ListPreference
            android:defaultValue="5"
            android:entries="@array/refrateoptions_entries"
            android:entryValues="@array/refrateoptions"
            android:key="RefrateAR"
            android:layout="@layout/pref"
            android:summary="@string/Restartneed"
            android:title="@string/Refrinter" />
        <ListPreference
            android:defaultValue="40"
            android:entries="@array/maxno_issues_entries"
            android:entryValues="@array/maxno_issues"
            android:key="IssuesNoAR"
            android:layout="@layout/pref"
            android:summary="@string/IssuesMaxNo"
            android:title="@string/IssuesNo" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="AnalyticsSW"
            android:summary=""
            android:title="@string/Analytics" />
        
        <com.mk4droid.IMC_Core.Preference_Reset
            android:key="Reset"
            android:layout="@layout/pref"
            android:summary="@string/Deleteallissuedatastoredlocallytoyourphone"
            android:title="@string/Reset" />
    </PreferenceCategory>
    <PreferenceCategory
        android:key="CategAbout"
        android:layout="@layout/pref_categories_layout"
        android:title="@string/About" >
        <com.mk4droid.IMC_Core.Preference_PlainText
            android:key="Version"
            android:layout="@layout/pref"
            android:summary=""
            android:title="@string/Version" />

        <com.mk4droid.IMC_Core.Preference_About
            android:key="About"
            android:summary=""
            android:title="@string/About" />

        <com.mk4droid.IMC_Core.Preference_Email
            android:key="Email"
            android:summary=""
            android:title="@string/Yourproposal" />

        
    </PreferenceCategory>

</PreferenceScreen>