<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/PreferencesTheme"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:background="#fff"
    android:gravity="top"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_main_theme_color"
        android:orientation="vertical" >

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="3dp"
            android:gravity="center" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:id="@+id/imvIMCLogo"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    android:paddingLeft="14dp"
                    android:paddingTop="14dp"
                    android:src="@drawable/imc_logo_plain" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/tv_app_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/splash_title"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#fff"
                    android:typeface="normal" />

                <View
                    android:id="@+id/linetheme"
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginLeft="25dp"
                    android:layout_marginRight="25dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/solid_orange" />

                <TextView
                    android:id="@+id/tv_splash_instance"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/instance"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#fff" />
            </LinearLayout>
        </TableRow>

        <View
            android:id="@+id/linethemesh"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#ffff997a" />

        <View
            android:id="@+id/linetheme"
            android:layout_width="fill_parent"
            android:layout_height="8px"
            android:background="@drawable/solid_orange"
            android:shadowColor="#a3f0f0"
            android:shadowDx="0"
            android:shadowDy="1"
            android:shadowRadius="1" />

        <View
            android:id="@+id/linethemesh"
            android:layout_width="fill_parent"
            android:layout_height="1px"
            android:background="#aaa3f0f0" />
    </LinearLayout>

    <EditText
        android:id="@+id/et_imc_username"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Username"
        android:singleLine="true"
        android:drawableLeft="@drawable/username_icon24"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/et_imc_Password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Password"
        android:inputType="textPassword"
        android:drawableLeft="@drawable/password_icon"
        android:drawablePadding="10dp" />

    <EditText
        android:id="@+id/et_imc_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/Yourfullname"
        android:inputType="textPersonName" 
        
        android:drawableLeft="@drawable/ic_user_details"
        android:drawablePadding="10dp"/>

    <EditText
        android:id="@+id/et_imc_email"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableLeft="@drawable/ic_email"
        android:drawablePadding="10dp" />

    <TextView
        android:id="@+id/tv_register_advise"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="2dp"
        android:gravity="center"
        android:text="@string/Createanaccount"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#000" />

    <Button
        android:id="@+id/bt_imc_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bt_custom_click_orange"
        android:padding="15dp"
        android:text="@string/Register"
        android:textColor="#fff" />

    <Button
        android:id="@+id/bt_imc_register_cancel"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/bt_custom_click_gray"
        android:padding="15dp"
        android:text="@string/Cancel" />

</LinearLayout>